--- a/src/client/index.html
+++ b/src/client/index.html
@@ -10,15 +10,18 @@ Description: This is my main page!
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>INFT 2202</title>
 
-
     <link rel="stylesheet" href="css/style.css">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 
 
 <!-- The nav bar stuff!-->
@@ -26,23 +29,23 @@ Description: This is my main page!
 <header data-bs-theme="dark">
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Zooédex</a>
+      <a class="navbar-brand" href="index.html">Zookédex</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link" href="list.html">List</a>
+            <a class="nav-link" href="list.html"><i class="fas fa-list"></i> List</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="add.html">Add</a>
+            <a class="nav-link" href="add.html"><i class="fas fa-plus"></i> Add</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
           </li>
         </ul>
       </div>
@@ -108,20 +111,20 @@ Description: This is my main page!
     <div class="row">
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal">Add To Zooédex</h2>
-        <p>Here you can add to your collection of animals in the Zooédex!</p>
+        <h2 class="fw-normal">Add To Zookédex</h2>
+        <p>Here you can add to your collection of animals in the Zookédex!</p>
         <p><a class="btn btn-secondary" href="add.html">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal">Zooédex</h2>
-        <p>Here is where you can view the collection of the animals in the Zooédex!</p>
+        <h2 class="fw-normal">Zookédex</h2>
+        <p>Here is where you can view the collection of the animals in the Zookédex!</p>
         <p><a class="btn btn-secondary" href="list.html">View page &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
         <h2 class="fw-normal">About Us</h2>
-        <p>Here you can learn all about us and what we do here at Zooédex.</p>
+        <p>Here you can learn all about us and what we do here at Zookédex.</p>
         <p><a class="btn btn-secondary" href="about.html">View page &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
@@ -178,8 +181,8 @@ Description: This is my main page!
       <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
     </main>
-    <!-- I know you saif to add this in the app.js file and I did, but I couldnt get it working right now.-->
     <script>
+      //I know you said to add this in the app.js file and I did, but I couldnt get it working right now.
       const date = new Date();
       const copy = document.getElementById('copyright');
       copy.textContent = date.getFullYear();
