--- a/src/client/index.html
+++ b/src/client/index.html
@@ -12,10 +12,12 @@ Description: This is my main page!
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>INFT 2202</title>
+    <title>Home Page - INFT 2202</title>
 
     <link rel="stylesheet" href="css/style.css">
-    
+
+    <link rel="icon" type="image/x-icon" href="img/Poké_Ball_icon.png">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
@@ -66,8 +68,8 @@ Description: This is my main page!
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1>Example headline.</h1>
-            <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
+            <h1>Welcome to Zookédex!</h1>
+            <p class="opacity-75">A cool place to view, learn and add to your animal collection!</p>
           </div>
         </div>
       </div>
@@ -75,7 +77,7 @@ Description: This is my main page!
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
         <div class="container">
           <div class="carousel-caption">
-            <h1>Another example headline.</h1>
+            <h1>Another headline about Zookédex.</h1>
             <p>Some representative placeholder content for the second slide of the carousel.</p>
           </div>
         </div>
