--- a/src/client/contact.html
+++ b/src/client/contact.html
@@ -25,33 +25,32 @@ Description: This is my contact page!
 
 
     
-    <header data-bs-theme="dark">
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Zooédex</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-              <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="list.html"><i class="fas fa-list"></i> List</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="add.html"><i class="fas fa-plus"></i> Add</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
-                </li>
-              </ul>
-            </div>
+    <header>
+      <nav class="navbar navbar-expand-md fixed-top custom-navbar ">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html"> <i class="fa-solid fa-circle-dot"></i> Zookédex</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+              <li class="nav-item">
+                <a class="nav-link" href="list.html"><i class="fas fa-list"></i> List</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="add.html"><i class="fas fa-plus"></i> Add</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
+              </li>
+            </ul>
           </div>
-        </nav>
+        </div>
+      </nav>
     </header>
-
 <!-- Begin page content -->
 <main class="flex-shrink-0">
   <div class="container">
