--- a/src/client/index.html
+++ b/src/client/index.html
@@ -162,9 +162,8 @@ Description: This is my main page!
     <!-- FOOTER -->
     <footer class="container">
       <p class="float-end"><a href="#">Back to top</a></p>
-      <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
     </footer>
-    </main>
     <script>
       //I know you said to add this in the app.js file and I did, but I couldnt get it working right now.
       const date = new Date();
