--- a/src/client/create.html
+++ b/src/client/create.html
@@ -1,9 +1,10 @@
 <!--
 Name: Alyssa Bhagwandin
-Filename: list.html
+Filename: add.html
 Course: INFT 2202
 Created Date: January 8th, 2024
-Description: This is my list page!
+Last edited Date: January 13th, 2024
+Description: This is my add page!
 -->
 
 <!doctype html>
@@ -11,7 +12,7 @@ Description: This is my list page!
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>list - INFT 2202</title>
+    <title>Create - INFT 2202</title>
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -22,11 +23,16 @@ Description: This is my list page!
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+    
+    <!-- Had to add "defer" becuase for some reason it wasnt working without it.-->
+    <!-- https://www.w3schools.com/tags/att_script_defer.asp-->
     <script src="app/app.js" defer></script>
 
     <script src="app/animals/create.js" defer></script>
-    
+
+  </head>
+
+    <body>
     <header>
       <nav class="navbar navbar-expand-md fixed-top custom-navbar ">
         <div class="container-fluid">
@@ -57,15 +63,58 @@ Description: This is my list page!
 <!-- Begin page content -->
 <main class="flex-shrink-0">
   <div class="container">
-    <h1 class="mt-5">List</h1>
-    <p class="lead">This page for the lists and here will display the list of animals. </p>
+    <h1 class="mt-5">Create</h1>
+    <p class="lead">This page is for adding animals to the list.</p>
+
+      <div id="message-box" class="alert alert-danger d-none"></div>
+      <form id="animal-form" novalidate>
+
+        <!-- Animal Name -->
+        <div class="mb-3">
+          <label for="animalForm" class="form-label">Animal Name</label>
+          <input type="text" id="animalName" name="name" class="form-control">
+          <p class="text-danger d-none">Animal name is required.</p>
+        </div>
+
+        <!-- Animal Breed -->
+        <div class="mb-3">
+          <label for="animalForm" class="form-label">Animal Breed</label>
+          <input type="text" id="animalBreed" name="breed" class="form-control">
+          <p class="text-danger d-none">Please enter a valid breed.</p>
+        </div>
+
+        <!-- Animal Eyes -->
+        <div class="mb-3">
+          <label for="animalForm" class="form-label">Animal Eyes</label>
+          <input type="number" id="animalEyes" name="eyes" class="form-control">
+          <p class="text-danger d-none">Please enter a valid number of eyes.</p>
+        </div>
+
+        <!-- Animal Legs -->
+        <div class="mb-3">
+          <label for="animalForm" class="form-label">Animal Legs</label>
+          <input type="number" id="animalLegs" name="legs" class="form-control">
+          <p class="text-danger d-none">Please enter a valid amount of legs.</p>
+        </div>
+
+        <!-- Animal Sound -->
+        <div class="mb-3">
+          <label for="animalForm" class="form-label">Animal Sound</label>
+          <input type="text" id="animalSounds" name="sound" class="form-control">
+          <p class="text-danger d-none">Please enter a valid animal sound.</p>
+        </div>
+
+      <!-- Submit Button -->
+      <button type="submit" class="btn custom-btn">Add Animal</button>
+    </form>
   </div>
 </main>
 
+
     <!-- FOOTER -->
-    <footer class="container">
+  <footer class="container">
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
-    </footer>
+  </footer>
   </body>
 </html>
