--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,6 +3,7 @@ Name: Alyssa Bhagwandin
 Filename: index.html
 Course: INFT 2202
 Created Date: January 8th, 2024
+Last edited Date: January 13th, 2024
 Description: This is my main page!
 -->
 
@@ -23,8 +24,8 @@ Description: This is my main page!
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-
+    
+    <script src="app/app.js" defer></script>
 
 <!-- The nav bar stuff!-->
 
@@ -41,7 +42,7 @@ Description: This is my main page!
             <a class="nav-link" href="list.html"><i class="fas fa-list"></i> List</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="add.html"><i class="fas fa-plus"></i> Add</a>
+            <a class="nav-link" href="create.html"><i class="fas fa-plus"></i> Create</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
@@ -109,7 +110,7 @@ Description: This is my main page!
         <img src="img/turtle.png" class="rounded-circle" width="140" height="140" alt="Add to Zookédex">
         <h2 class="fw-normal">Add To Zookédex</h2>
         <p>Here you can add to your collection of animals in the Zookédex!</p>
-        <p><a class="btn custom-btn" href="add.html">View page &raquo;</a></p>
+        <p><a class="btn custom-btn" href="create.html">View page &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4 text-center">
         <img src="img/folder.png" class="rounded-circle" width="140" height="140" alt="Add to Zookédex">
@@ -164,12 +165,6 @@ Description: This is my main page!
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
     </footer>
-    <script>
-      //I know you said to add this in the app.js file and I did, but I couldnt get it working right now.
-      const date = new Date();
-      const copy = document.getElementById('copyright');
-      copy.textContent = date.getFullYear();
-    </script>
   </body>
 </html>
 
