Final submission for ICE 3

--- a/src/client/create.html
+++ b/src/client/create.html
@@ -24,7 +24,7 @@ Description: This is my add page!
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
-    <!-- Had to add "defer" becuase for some reason it wasnt working without it.-->
+    <!-- Had to add "defer" because for some reason it wasnt working without it.-->
     <!-- https://www.w3schools.com/tags/att_script_defer.asp-->
     <script src="app/app.js" defer></script>
 
@@ -71,35 +71,35 @@ Description: This is my add page!
 
         <!-- Animal Name -->
         <div class="mb-3">
-          <label for="animalForm" class="form-label">Animal Name</label>
+          <label for="animalName" class="form-label">Animal Name</label>
           <input type="text" id="animalName" name="name" class="form-control">
           <p class="text-danger d-none">Animal name is required.</p>
         </div>
 
         <!-- Animal Breed -->
         <div class="mb-3">
-          <label for="animalForm" class="form-label">Animal Breed</label>
+          <label for="animalBreed" class="form-label">Animal Breed</label>
           <input type="text" id="animalBreed" name="breed" class="form-control">
           <p class="text-danger d-none">Please enter a valid breed.</p>
         </div>
 
         <!-- Animal Eyes -->
         <div class="mb-3">
-          <label for="animalForm" class="form-label">Animal Eyes</label>
+          <label for="animalEyes" class="form-label">Animal Eyes</label>
           <input type="number" id="animalEyes" name="eyes" class="form-control">
           <p class="text-danger d-none">Please enter a valid number of eyes.</p>
         </div>
 
         <!-- Animal Legs -->
         <div class="mb-3">
-          <label for="animalForm" class="form-label">Animal Legs</label>
+          <label for="animalLegs" class="form-label">Animal Legs</label>
           <input type="number" id="animalLegs" name="legs" class="form-control">
           <p class="text-danger d-none">Please enter a valid amount of legs.</p>
         </div>
 
         <!-- Animal Sound -->
         <div class="mb-3">
-          <label for="animalForm" class="form-label">Animal Sound</label>
+          <label for="animalSounds" class="form-label">Animal Sound</label>
           <input type="text" id="animalSounds" name="sound" class="form-control">
           <p class="text-danger d-none">Please enter a valid animal sound.</p>
         </div>
