--- a/src/client/HTML_Notes.html
+++ b/src/client/HTML_Notes.html
@@ -3,7 +3,7 @@ Name: Alyssa Bhagwandin
 Filename: style.css
 Course: INFT 2202
 Created Date: January 8th, 2024
-Description: This is my general style sheet!
+Description: This just some notes done in a demo for class.
 -->
 
 
