--- a/src/client/create.html
+++ b/src/client/create.html
@@ -18,17 +18,20 @@ Description: This is my add page!
 
     <link rel="icon" type="image/x-icon" href="img/Poké_Ball_icon.png">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <!--THE OLD ONE:  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet"> -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <!--THE OLD ONE:  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     
-    <!-- Had to add "defer" because for some reason it wasnt working without it.-->
+    <script rel="stylesheet" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Had to add "defer" because for some reason it wasnt working without it. Below shows the ref for it.-->
     <!-- https://www.w3schools.com/tags/att_script_defer.asp-->
-    <script src="app/app.js" defer></script>
+    <script type="module" src="./app/app.js"></script>
+    <script type="module" src="./app/animals/create.js"></script>
 
-    <script src="app/animals/create.js" defer></script>
 
   </head>
 
@@ -67,6 +70,9 @@ Description: This is my add page!
     <p class="lead">This page is for adding animals to the list.</p>
 
       <div id="message-box" class="alert alert-danger d-none"></div>
+      <i id="spinner" class="fa fa-spinner fa-spin d-none" style="font-size:24px"></i>
+
+
       <form id="animal-form" novalidate>
 
         <!-- Animal Name -->
