--- a/src/client/list.html
+++ b/src/client/list.html
@@ -13,62 +13,64 @@ Description: This is my list page!
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>list - INFT 2202</title>
 
+    <!-- CSS stylesheet. -->
     <link rel="stylesheet" href="css/style.css">
-
     <link rel="icon" type="image/x-icon" href="img/Poké_Ball_icon.png">
+    <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+
+
+  <!-- JavaScript Files. -->
+    <script rel="stylesheet" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="app/app.js"></script>
+    <script type="module" src="app/animals/create.js"></script>
+  </head>
     
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-
-    <header>
-      <nav class="navbar navbar-expand-md fixed-top custom-navbar ">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"> <i class="fa-solid fa-circle-dot"></i> Zookédex</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-              <li class="nav-item">
-                <a class="nav-link" href="list.html"><i class="fas fa-list"></i> List</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="add.html"><i class="fas fa-plus"></i> Add</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
-              </li>
-            </ul>
-          </div>
+<!-- The nav bar stuff!-->
+  <header>
+    <nav class="navbar navbar-expand-md fixed-top custom-navbar ">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">  Joystick Junkies</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link" href="list.html"><i class="fa-solid fa-gamepad"></i> Shop</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="create.html"><i class="fa-solid fa-cart-shopping"></i> Cart</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
+      </div>
+    </nav>
+  </header>
 
-<!-- Begin page content -->
-<main class="flex-shrink-0">
-  <div class="container">
-    <h1 class="mt-5">List</h1>
-    <p class="lead">This page for the lists and here will display the list of animals. </p>
-  </div>
-</main>
 
-    <!-- FOOTER -->
+  <!-- Begin page content -->
+  <main class="flex-shrink-0">
+    <div class="container">
+      <h1 class="mt-5">List</h1>
+      <p class="lead">This page for the lists and here will display the list of animals. </p>
+    </div>
+  </main>
+
+    <!-- Footer -->
     <footer class="container">
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
     </footer>
-    <script>
-      //I know you said to add this in the app.js file and I did, but I couldnt get it working right now.
-      const date = new Date();
-      const copy = document.getElementById('copyright');
-      copy.textContent = date.getFullYear();
-    </script>
   </body>
 </html>
