--- a/src/client/terms.html
+++ b/src/client/terms.html
@@ -11,7 +11,7 @@ Description: This is my privacy page!
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Create - INFT 2202</title>
+    <title>Terms and Conditions - INFT 2202</title>
 
     <link rel="stylesheet" href="css/style.css">
 
