--- a/src/client/create.html
+++ b/src/client/create.html
@@ -14,32 +14,25 @@ Description: This is my add page!
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Create - INFT 2202</title>
 
+	<!-- CSS stylesheet. -->
     <link rel="stylesheet" href="css/style.css">
-
     <link rel="icon" type="image/x-icon" href="img/Poké_Ball_icon.png">
-
-    
     <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-    <!--THE OLD ONE:  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet"> -->
-
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <!--THE OLD ONE:  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
-    
+ 
+ 	<!-- JavaScript Files. -->
     <script rel="stylesheet" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Had to add "defer" because for some reason it wasnt working without it. Below shows the ref for it.-->
-    <!-- https://www.w3schools.com/tags/att_script_defer.asp-->
-    <script type="module" src="./app/app.js"></script>
-    <script type="module" src="./app/animals/create.js"></script>
-
-
+    <script type="module" src="app/app.js"></script>
+    <script type="module" src="app/animals/create.js"></script>
   </head>
-
-    <body>
+  
+  <!-- The nav bar stuff!-->
+  <body>
     <header>
       <nav class="navbar navbar-expand-md fixed-top custom-navbar ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"> <i class="fa-solid fa-circle-dot"></i> Zookédex</a>
+          <a class="navbar-brand" href="index.html"> 
+			<i class="fa-solid fa-circle-dot"></i> Zookédex</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -63,64 +56,64 @@ Description: This is my add page!
       </nav>
     </header>
 
-<!-- Begin page content -->
-<main class="flex-shrink-0">
-  <div class="container">
-    <h1 class="mt-5">Create</h1>
-    <p class="lead">This page is for adding animals to the list.</p>
 
-      <div id="message-box" class="alert alert-danger d-none"></div>
-      <i id="spinner" class="fa fa-spinner fa-spin d-none" style="font-size:24px"></i>
+	<!-- Begin page content -->
+	<main class="flex-shrink-0">
+	  <div class="container">
+		<h1 class="mt-5">Create</h1>
+		<p class="lead">This page is for adding animals to the list.</p>
 
+		  <div id="message-box" class="alert alert-danger d-none"></div>
+		  <i id="spinner" class="fa fa-spinner fa-spin d-none" style="font-size:40px"></i>
 
-      <form id="animal-form" novalidate>
+		  <form id='animal-form' novalidate>
 
-        <!-- Animal Name -->
-        <div class="mb-3">
-          <label for="animalName" class="form-label">Animal Name</label>
-          <input type="text" id="animalName" name="name" class="form-control">
-          <p class="text-danger d-none">Animal name is required.</p>
-        </div>
+			<!-- Animal Name -->
+			<div class="mb-3">
+			  <label for="animalName" class="form-label">Animal Name</label>
+			  <input type="text" id="animalName" name="name" class="form-control">
+			  <p class="text-danger d-none">Animal name is required.</p>
+			</div>
 
-        <!-- Animal Breed -->
-        <div class="mb-3">
-          <label for="animalBreed" class="form-label">Animal Breed</label>
-          <input type="text" id="animalBreed" name="breed" class="form-control">
-          <p class="text-danger d-none">Please enter a valid breed.</p>
-        </div>
+			<!-- Animal Breed -->
+			<div class="mb-3">
+			  <label for="animalBreed" class="form-label">Animal Breed</label>
+			  <input type="text" id="animalBreed" name="breed" class="form-control">
+			  <p class="text-danger d-none">Please enter a valid breed.</p>
+			</div>
 
-        <!-- Animal Eyes -->
-        <div class="mb-3">
-          <label for="animalEyes" class="form-label">Animal Eyes</label>
-          <input type="number" id="animalEyes" name="eyes" class="form-control">
-          <p class="text-danger d-none">Please enter a valid number of eyes.</p>
-        </div>
+			<!-- Animal Eyes -->
+			<div class="mb-3">
+			  <label for="animalEyes" class="form-label">Animal Eyes</label>
+			  <input type="number" id="animalEyes" name="eyes" class="form-control">
+			  <p class="text-danger d-none">Please enter a valid number of eyes.</p>
+			</div>
 
-        <!-- Animal Legs -->
-        <div class="mb-3">
-          <label for="animalLegs" class="form-label">Animal Legs</label>
-          <input type="number" id="animalLegs" name="legs" class="form-control">
-          <p class="text-danger d-none">Please enter a valid amount of legs.</p>
-        </div>
+			<!-- Animal Legs -->
+			<div class="mb-3">
+			  <label for="animalLegs" class="form-label">Animal Legs</label>
+			  <input type="number" id="animalLegs" name="legs" class="form-control">
+			  <p class="text-danger d-none">Please enter a valid amount of legs.</p>
+			</div>
 
-        <!-- Animal Sound -->
-        <div class="mb-3">
-          <label for="animalSounds" class="form-label">Animal Sound</label>
-          <input type="text" id="animalSounds" name="sound" class="form-control">
-          <p class="text-danger d-none">Please enter a valid animal sound.</p>
-        </div>
+			<!-- Animal Sound -->
+			<div class="mb-3">
+			  <label for="animalSounds" class="form-label">Animal Sound</label>
+			  <input type="text" id="animalSounds" name="sound" class="form-control">
+			  <p class="text-danger d-none">Please enter a valid animal sound.</p>
+			</div>
 
-      <!-- Submit Button -->
-      <button type="submit" class="btn custom-btn">Add Animal</button>
-    </form>
-  </div>
-</main>
+		  <!-- Submit Button -->
+		  <button type="submit" class="btn custom-btn">Add Animal</button>
+		  </form>
+	  </div>
+	</main>
 
 
     <!-- FOOTER -->
-  <footer class="container">
+    <footer class="container">
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
-  </footer>
+    </footer>
   </body>
 </html>
