--- a/src/client/about.html
+++ b/src/client/about.html
@@ -20,7 +20,7 @@ Description: This is my about page!
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
  
  	<!-- JavaScript Files. -->
-    <script rel="stylesheet" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- removed the bootstrap one and put it at the bottom. -->
     <script type="module" src="app/app.js"></script>
     <script type="module" src="app/animals/create.js"></script>
   </head>
@@ -38,13 +38,13 @@ Description: This is my about page!
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
               <li class="nav-item">
-                <a class="nav-link" href="list.html"><i class="fas fa-list"></i> List</a>
+                <a class="nav-link" href="search.html"><i class="fas fa-list"></i> List</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="create.html"><i class="fas fa-plus"></i> Create</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
+                <a class="nav-link active" href="about.html"><i class="fas fa-info-circle"></i> About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
@@ -55,26 +55,67 @@ Description: This is my about page!
       </nav>
     </header>
 
-	<!-- Begin page content -->
-	<main class="flex-shrink-0">
-	  <div class="container about-container d-flex">
-		<!-- Image Section -->
-		<img src="img/profilePic.jpg" alt="Profile Picture" class="profile-picture me-4">
+    <!-- Begin page content -->
+    <main class="flex-shrink-0">
+      <div class="container about-container d-flex">
+      <!-- Image Section -->
+      <img src="img/profilePic.jpg" alt="Profile Picture" class="profile-picture me-4">
 
-		<!-- Text Section -->
-		<div>
-		  <h1 class="mt-4">About Me</h1>
-		  <p class="lead">Hi! My name is Alyssa Bhagwandin</p>
-		  <p>I am currently pursuing my studies in Computer Programming, with a passion for creating innovative and life-altering solutions. My goal is to work as a software developer or game designer upon graduation, contributing to exciting projects that make a difference.</p>
-		  <p>Thank you for visiting Zookédex! I hope you enjoy learning more about the amazing animals in the collection.</p>
-		</div>
-	  </div>
-	</main>
+      <!-- Text Section -->
+      <div>
+        <h1 class="mt-4">About Me</h1>
+        <p class="lead">Hi! My name is Alyssa Bhagwandin</p>
+        <p>I am currently pursuing my studies in Computer Programming, with a passion for creating innovative and life-altering solutions. My goal is to work as a software developer or game designer upon graduation, contributing to exciting projects that make a difference.</p>
+        <p>Thank you for visiting Zookédex! I hope you enjoy learning more about the amazing animals in the collection.</p>
+      </div>
+    </div>
 
+
+    <!-- Accordion Section -->
+    <div class="accordion my-5" id="aboutAccordion">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            Question 1
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#aboutAccordion">
+          <div class="accordion-body">
+            REPLACE WITH REAL WORDS LATER
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Question 2
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#aboutAccordion">
+          <div class="accordion-body">
+           REPLACE WITH REAL WORDS LATER
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Question 3
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#aboutAccordion">
+          <div class="accordion-body">
+            REPLACE WITH REAL WORDS LATER
+          </div>
+        </div>
+      </div>
+    </div>
+    </main>
     <!-- FOOTER -->
     <footer class="container">
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
     </footer>
+  <!-- Added this becuase the instructions said to put it at the bottom. -->
+  <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
