--- a/src/client/contact.html
+++ b/src/client/contact.html
@@ -20,7 +20,7 @@ Description: This is my contact page!
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
  
  	<!-- JavaScript Files. -->
-    <script rel="stylesheet" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- removed the bootstrap one and put it at the bottom. -->
     <script type="module" src="app/app.js"></script>
     <script type="module" src="app/animals/create.js"></script>
   </head>
@@ -38,7 +38,7 @@ Description: This is my contact page!
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
               <li class="nav-item">
-                <a class="nav-link" href="list.html"><i class="fas fa-list"></i> List</a>
+                <a class="nav-link" href="search.html"><i class="fas fa-list"></i> List</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="create.html"><i class="fas fa-plus"></i> Create</a>
@@ -47,7 +47,7 @@ Description: This is my contact page!
                 <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
+                <a class="nav-link active" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
               </li>
             </ul>
           </div>
@@ -130,5 +130,7 @@ Description: This is my contact page!
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
     </footer>
+    <!-- Added this becuase the instructions said to put it at the bottom. -->
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
