--- a/src/client/about.html
+++ b/src/client/about.html
@@ -13,109 +13,109 @@ Description: This is my about page!
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About - INFT 2202</title>
 
-	<!-- CSS stylesheet. -->
+    <!-- CSS stylesheet -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="img/Poké_Ball_icon.png">
     <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
  
- 	<!-- JavaScript Files. -->
-    <!-- removed the bootstrap one and put it at the bottom. -->
+    <!-- JavaScript Files -->
+    <!-- moved Bootstrap JS to the bottom of the body -->
     <script type="module" src="app/app.js"></script>
     <script type="module" src="app/animals/create.js"></script>
   </head>
   
-  <!-- The nav bar stuff!-->
   <body>
+    <!-- Navigation Bar -->
     <header>
-      <nav class="navbar navbar-expand-md fixed-top custom-navbar ">
+      <nav class="navbar navbar-expand-md fixed-top custom-navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"> 
-			<i class="fa-solid fa-circle-dot"></i> Zookédex</a>
+          <a class="navbar-brand" href="index.html">
+            <i class="fa-solid fa-circle-dot"></i> Zookédex
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
-              <li class="nav-item">
-                <a class="nav-link" href="search.html"><i class="fas fa-list"></i> List</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="create.html"><i class="fas fa-plus"></i> Create</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="about.html"><i class="fas fa-info-circle"></i> About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
-              </li>
+              <li class="nav-item"><a class="nav-link" href="search.html"><i class="fas fa-list"></i> List</a></li>
+              <li class="nav-item"><a class="nav-link" href="create.html"><i class="fas fa-plus"></i> Create</a></li>
+              <li class="nav-item"><a class="nav-link active" href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
+              <li class="nav-item"><a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
 
-    <!-- Begin page content -->
+    <!-- Main Content -->
     <main class="flex-shrink-0">
-      <div class="container about-container d-flex">
-      <!-- Image Section -->
-      <img src="img/profilePic.jpg" alt="Profile Picture" class="profile-picture me-4">
+      <div class="container py-5">
+        <div class="row">
+          <!-- Image Section -->
+          <div class="col-md-4 text-center">
+            <img src="img/Poké_Ball_icon.png" alt="Profile Picture" class="img-fluid rounded-circle mb-4">
+          </div>
 
-      <!-- Text Section -->
-      <div>
-        <h1 class="mt-4">About Me</h1>
-        <p class="lead">Hi! My name is Alyssa Bhagwandin</p>
-        <p>I am currently pursuing my studies in Computer Programming, with a passion for creating innovative and life-altering solutions. My goal is to work as a software developer or game designer upon graduation, contributing to exciting projects that make a difference.</p>
-        <p>Thank you for visiting Zookédex! I hope you enjoy learning more about the amazing animals in the collection.</p>
-      </div>
-    </div>
+          <!-- Text Section -->
+          <div class="col-md-8">
+            <h1 class="mt-4">About Zookédex</h1>
+            <p class="lead">Hi! Welcome to Zookédex!</p>
+            <p>Whether you're exploring the list of unique animals, contributing your own creations, or simply having fun discovering new species, Zookédex is designed to spark curiosity and bring joy to anyone who visits.</p>
+            <p>Our mission is to create a space where imagination meets technology. Every creature in Zookédex is a testament to the boundless potential of human creativity. By offering tools to create, share, and learn, we hope to inspire users to think outside the box and embrace the limitless possibilities of storytelling and design.</p>
+            <p>Thank you for being a part of this imaginative journey, and we can't wait to see the creatures you bring to life!</p>
+          </div>
+        </div>
 
-
-    <!-- Accordion Section -->
-    <div class="accordion my-5" id="aboutAccordion">
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-            Question 1
-          </button>
-        </h2>
-        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#aboutAccordion">
-          <div class="accordion-body">
-            REPLACE WITH REAL WORDS LATER
+        <!-- Accordion Section -->
+        <div class="accordion my-5" id="aboutAccordion">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                How do I search for animals?
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#aboutAccordion">
+              <div class="accordion-body">
+                Use the "List" page to browse all the animals in Zookédex or use the search functionality to find specific creatures based on their traits or names.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Is this website open to all users?
+              </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#aboutAccordion">
+              <div class="accordion-body">
+                Absolutely! Anyone can browse the animals or contribute to the Zookédex. Just make sure your submissions follow community guidelines.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Can I suggest improvements or report a bug?
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#aboutAccordion">
+              <div class="accordion-body">
+                Yes, feedback is always welcome! Head to the "Contact" page to share your ideas or report any issues.
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            Question 2
-          </button>
-        </h2>
-        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#aboutAccordion">
-          <div class="accordion-body">
-           REPLACE WITH REAL WORDS LATER
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingThree">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            Question 3
-          </button>
-        </h2>
-        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#aboutAccordion">
-          <div class="accordion-body">
-            REPLACE WITH REAL WORDS LATER
-          </div>
-        </div>
-      </div>
-    </div>
     </main>
-    <!-- FOOTER -->
-    <footer class="container">
+
+    <!-- Footer -->
+    <footer class="container text-center">
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
     </footer>
-  <!-- Added this becuase the instructions said to put it at the bottom. -->
-  <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- JavaScript -->
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
