--- a/src/client/search.html
+++ b/src/client/search.html
@@ -19,11 +19,6 @@ Description: This is my list page!
     <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
  
- 	<!-- JavaScript Files. -->
-    <!-- removed the bootstrap one and put it at the bottom. -->
-    <script type="module" src="app/app.js"></script>
-    <script type="module" src="app/animals/create.js"></script>
-    <script type="module" src="app/animals/search.js"></script>
   </head>
   
   <!-- The nav bar stuff!-->
@@ -63,7 +58,7 @@ Description: This is my list page!
       <h1 class="mt-5">Animal List</h1>
       <p class="lead">Here will display all of the animals in your collection! </p>
       <div id="message-box" class="alert alert-info d-none">There are currently no animals available in your local storage.</div>
-      <table id="animals-list" class="table table-striped d-none">
+      <table id="animals-list" class="table table-striped table-hover d-none">
         <thead>
         <tr>
           <th>Owner</th>
@@ -76,10 +71,28 @@ Description: This is my list page!
       </div>
     </main>
 
+    <nav id="pagination-container">
+      <ul class="pagination justify-content-center"></ul>
+    </nav>
 
-
-
-
+    <!-- Modal -->
+    <div class="modal fade" id="ConfirmModal" tabindex="-1" aria-labelledby="ConfirmModal" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="ConfirmModal">Are you sure? 😔</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            Are you sure you wish to delete the selected animal for ever? 
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-danger">Delete Animal</button>
+          </div>
+        </div>
+      </div>
+    </div>
   
 
     <!-- FOOTER -->
@@ -87,7 +100,11 @@ Description: This is my list page!
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
     </footer>
-  <!-- Added this becuase the instructions said to put it at the bottom. -->
-  <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- JavaScript Files. -->
+    <!-- Added this becuase the instructions said to put it at the bottom. -->
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="app/app.js"></script>
+    <script type="module" src="app/animals/create.js"></script>
+    <script type="module" src="app/animals/search.js"></script>
   </body>
 </html>
