Fixed some stuff that wasnt working.
Everything from ICE 7 and down should all be fully functional and this stuff all works so if it doesn't anymore "you" aka future me messed it up.

--- a/src/client/about.html
+++ b/src/client/about.html
@@ -75,7 +75,7 @@ Description: This is my about page!
                 How do I search for animals?
               </button>
             </h2>
-            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#aboutAccordion">
+            <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#aboutAccordion">
               <div class="accordion-body">
                 Use the "List" page to browse all the animals in Zookédex or use the search functionality to find specific creatures based on their traits or names.
               </div>
@@ -87,7 +87,7 @@ Description: This is my about page!
                 Is this website open to all users?
               </button>
             </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#aboutAccordion">
+            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#aboutAccordion">
               <div class="accordion-body">
                 Absolutely! Anyone can browse the animals or contribute to the Zookédex. Just make sure your submissions follow community guidelines.
               </div>
