--- a/src/client/create.html
+++ b/src/client/create.html
@@ -68,7 +68,7 @@ Description: This is my add page!
 			<div class="mb-3">
 			  <label for="animalName" class="form-label">Animal Name</label>
 			  <input type="text" id="animalName" name="name" class="form-control">
-			  <p id="message-box" class="text-danger d-none">Animal name is required.</p>
+			  <p class="text-danger d-none">Animal name is required.</p>
 			</div>
 
 			<!-- Animal Breed -->
@@ -110,7 +110,7 @@ Description: This is my add page!
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="SuccessModal">Animal Created 🎉🥳</h5>
+          <h5 class="modal-title">Animal Created 🎉🥳</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
