--- a/src/client/search.html
+++ b/src/client/search.html
@@ -1,6 +1,6 @@
 <!--
 Name: Alyssa Bhagwandin
-Filename: list.html
+Filename: search.html
 Course: INFT 2202
 Created Date: January 8th, 2024
 Description: This is my list page!
@@ -80,7 +80,7 @@ Description: This is my list page!
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="ConfirmModal">Are you sure? 😔</h1>
+            <h1 class="modal-title fs-5" >Are you sure? 😔</h1>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
